--- a/CakeStore.WebUI/Views/web.config
+++ b/CakeStore.WebUI/Views/web.config
@@ -17,6 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="CakeStore.WebUI" />
+        <add namespace="CakeStore.WebUI.HtmlHelpers"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
